src/codegen/tests/snapshots/rusty__codegen__tests__typesystem_test__datatypes_larger_than_int_promote_the_second_operand.snap
---
source: src/codegen/tests/typesystem_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i64, i64 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %b = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %c = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %load_b = load i32, i32* %b, align [filtered]
  %1 = sext i32 %load_b to i64
  %load_c = load i64, i64* %c, align [filtered]
  %tmpVar = add i64 %1, %load_c
  store i64 %tmpVar, i64* %x, align [filtered]
  ret void
}
