src/codegen/tests/snapshots/rusty__codegen__tests__typesystem_test__even_all_sint_expressions_fallback_to_dint.snap
---
source: src/codegen/tests/typesystem_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i8, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %b = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %c = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %load_b = load i8, i8* %b, align [filtered]
  %1 = sext i8 %load_b to i32
  %load_c = load i8, i8* %c, align [filtered]
  %2 = sext i8 %load_c to i32
  %tmpVar = add i32 %1, %2
  %3 = trunc i32 %tmpVar to i8
  store i8 %3, i8* %x, align [filtered]
  ret void
}
