src/codegen/tests/snapshots/rusty__codegen__tests__typesystem_test__float_assigned_to_int_is_cast.snap
---
source: src/codegen/tests/typesystem_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i16, i16, float }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %a = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %b = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %c = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %load_c = load float, float* %c, align [filtered]
  %1 = fptosi float %load_c to i16
  store i16 %1, i16* %a, align [filtered]
  %load_c1 = load float, float* %c, align [filtered]
  %2 = fptoui float %load_c1 to i16
  store i16 %2, i16* %b, align [filtered]
  ret void
}
