src/codegen/tests/snapshots/rusty__codegen__tests__typesystem_test__int_assigned_to_float_is_cast.snap
---
source: src/codegen/tests/typesystem_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i16, i16, float }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %a = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %b = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %c = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %load_a = load i16, i16* %a, align [filtered]
  %1 = sitofp i16 %load_a to float
  store float %1, float* %c, align [filtered]
  %load_b = load i16, i16* %b, align [filtered]
  %2 = uitofp i16 %load_b to float
  store float %2, float* %c, align [filtered]
  ret void
}
