src/codegen/tests/snapshots/rusty__codegen__tests__typesystem_test__int_smaller_or_equal_to_float_converted_to_float.snap
---
source: src/codegen/tests/typesystem_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { float, i16, float }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %a = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %b = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %c = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %load_b = load i16, i16* %b, align [filtered]
  %1 = sitofp i16 %load_b to float
  %load_a = load float, float* %a, align [filtered]
  %tmpVar = fadd float %1, %load_a
  store float %tmpVar, float* %c, align [filtered]
  ret void
}
