src/codegen/tests/snapshots/rusty__codegen__tests__typesystem_test__numerical_promotion_for_variadic_functions_without_declaration.snap
---
source: src/codegen/tests/typesystem_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type {}

@main_instance = global %main zeroinitializer
@__main.s__init = unnamed_addr constant [81 x i8] c"\0A numbers: %f %f %f %d \0A \0A\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00"

declare i32 @printf(ptr, ...)

define void @main(ptr %0) {
entry:
  %s = alloca [81 x i8], align [filtered]
  %float = alloca float, align [filtered]
  %double = alloca double, align [filtered]
  %integer = alloca i16, align [filtered]
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %s, ptr align [filtered] @__main.s__init, i64 ptrtoint (ptr getelementptr ([81 x i8], ptr null, i32 1) to i64), i1 false)
  store float 3.000000e+00, ptr %float, align [filtered]
  store double 3.000000e+00, ptr %double, align [filtered]
  store i16 3, ptr %integer, align [filtered]
  %load_float = load float, ptr %float, align [filtered]
  %1 = fpext float %load_float to double
  %load_double = load double, ptr %double, align [filtered]
  %load_integer = load i16, ptr %integer, align [filtered]
  %2 = sext i16 %load_integer to i32
  %call = call i32 (ptr, ...) @printf(ptr %s, double 3.000000e+00, double %1, double %load_double, i32 %2, ptr null)
  ret void
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
