src/codegen/tests/snapshots/rusty__codegen__tests__typesystem_test__small_int_varargs_get_promoted_while_32bit_and_higher_keep_their_type.snap
---
source: src/codegen/tests/typesystem_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@utf08_literal_0 = private unnamed_addr constant [26 x i8] c"(d) result : %d %d %d %u\0A\00"
@utf08_literal_1 = private unnamed_addr constant [27 x i8] c"(hd) result : %hd %hd %hd\0A\00"

declare i32 @printf(ptr, ...)

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %out1 = alloca i16, align [filtered]
  %out2 = alloca i32, align [filtered]
  %out3 = alloca i64, align [filtered]
  %out4 = alloca i32, align [filtered]
  store i16 -1, ptr %out1, align [filtered]
  store i32 -1, ptr %out2, align [filtered]
  store i64 -1, ptr %out3, align [filtered]
  store i32 -1, ptr %out4, align [filtered]
  store i32 0, ptr %main, align [filtered]
  %load_out1 = load i16, ptr %out1, align [filtered]
  %0 = sext i16 %load_out1 to i32
  %load_out2 = load i32, ptr %out2, align [filtered]
  %load_out3 = load i64, ptr %out3, align [filtered]
  %load_out4 = load i32, ptr %out4, align [filtered]
  %call = call i32 (ptr, ...) @printf(ptr @utf08_literal_0, i32 %0, i32 %load_out2, i64 %load_out3, i32 %load_out4, ptr null)
  %load_out11 = load i16, ptr %out1, align [filtered]
  %1 = sext i16 %load_out11 to i32
  %load_out22 = load i32, ptr %out2, align [filtered]
  %load_out33 = load i64, ptr %out3, align [filtered]
  %call4 = call i32 (ptr, ...) @printf(ptr @utf08_literal_1, i32 %1, i32 %load_out22, i64 %load_out33, ptr null)
  %main_ret = load i32, ptr %main, align [filtered]
  ret i32 %main_ret
}
